--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -41,7 +41,7 @@
 
       <% if(user.id == profileUser.id) { %>
 
-        <a href="/users/profile/edit/<%= user.id %>" class="btn btn-danger"> Edit </a>
+        <a href="/users/profile/edit/<%= user.id %>" class="btn btn-dark standard-width my-2 d-block"> Edit Profile </a>
 
       <% } %>
 
