--- a/views/games/find_map.ejs
+++ b/views/games/find_map.ejs
@@ -18,7 +18,7 @@
         </select>
       </div>
 
-    <button class="btn btn-primary submit mt-2" type="submit" id="submit"> Search </button>
+    <button class="btn btn-primary submit standard-width my-2 d-block" type="submit" id="submit"> Search </button>
 </form>
 
 
