--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -36,7 +36,7 @@
                   <div class="alert alert-success"> <p class="card-text"> Game Full </p>
                   </div>
                 <% } %>
-                  <a href="games/show/<%= game.id %>" class="btn btn-primary"><i class="fas fa-book"></i>
+                  <a href="games/show/<%= game.id %>" class="btn btn-primary standard-width my-2 d-block"><i class="fas fa-book"></i>
                     See Details</a>
               </div>
             </div>
