--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -53,7 +53,8 @@
           <p class="card-text"> <%= dateformat(gameDate, "fullDate") %>  | <%= timeChange(upcomingGame.startTime) %> </p>
           <p class="card-text"><%= truncate(upcomingGame.description, 250) %> </p>
           <% if (upcomingGame.numberOfPlayers > 0) { %>
-          <p class="card-text text-muted"> Seeking <%= upcomingGame.numberOfPlayers %>
+
+            <p class="card-text text-muted"> Seeking <%= upcomingGame.numberOfPlayers %>
 
             <%= makePlural('Player', Number(upcomingGame.numberOfPlayers)) %></p>
 
@@ -64,8 +65,26 @@
 
           <% } %>
 
-            <a href="/games/show/<%=upcomingGame.id%>" class="btn btn-primary"><i class="fas fa-book"></i>
-              See Details</a>
+            <a href="/games/show/<%=upcomingGame.id%>" class="btn btn-primary standard-width my-2 d-block"><i class="fas fa-book"></i> See Details</a>
+
+            <% if (upcomingGame.host == user.id) { %>
+
+              <a href="/games/edit/<%= upcomingGame.id%>" class="btn btn-dark standard-width my-2 d-block"> Edit Game </a>
+
+              <form action="/games/<%= upcomingGame.id %>/?_method=DELETE" method="post" id="delete-form">
+                <input type="hidden" name="_method" value="DELETE">
+                <button type="submit" class="btn btn-danger my-2 standard-width d-block"><i class= "fas fa-trash"></i>
+                  Delete </button>
+              </form>
+
+            <% } else { %>
+              <form action="/users/drop_player/?_method=DELETE" method="post" id="delete-form">
+                <input type="hidden" name="_method" value="DELETE">
+                <input type="hidden" name="game_id" value="<%= upcomingGame.id %>">
+                <button type="submit" class="btn btn-danger  standard-width my-2"><i class= "fas fa-trash"></i>
+                  Leave Game </button>
+              </form>
+            <% } %>
         </div>
       </div>
 
