--- a/views/users/user_games.ejs
+++ b/views/users/user_games.ejs
@@ -1,13 +1,13 @@
 <%- include ../partials/dashboard_nav.ejs %>
 
-<h1 class="text-center"> <%= title %>   </h1>
+<h1 class="text-center"> <%= title %> </h1>
 
 <% if(games.length == 0) { %>
 
   <div class="card card-inline">
       <div class="card-body">
         <h5 class="card-title"> No Games Added Yet! </h5>
-        <p class="card-text">Add some games to see games listed here instead of this dumb message </p>
+        <p class="card-text">Add some games to see games listed here instead of this message </p>
         <a href="/games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
           Add New Game</a>
       </div>
@@ -18,25 +18,28 @@
   <% games.forEach(function(game){ %>
 
     <div class="col-12">
-      <div class="card card-inline border-2 border-secondary">
+      <div class="card card-inline border-2 border-secondary my-2">
         <div class="card-body">
           <h5 class="card-title"><%= game.title %> </h5>
           <p class="card-text"><%= truncate(game.description, 250) %> </p>
-          <p class="card-text"> Seeking <%= game.numberOfPlayers %>
+          <p class="card-text text-muted"> Seeking <%= game.numberOfPlayers %>
             players </p>
-          <a href="/games/show/<%= game.id %>" class="btn btn-primary m-2"><i class="fas fa-book"></i> Details</a>
+          <a href="/games/show/<%= game.id %>" class="btn btn-primary my-2 standard-width d-block"><i class="fas fa-book"></i> Details</a>
           <% if (game.host == user.id) { %>
+
+            <a href="/games/edit/<%= game.id%>" class="btn btn-dark my-2 standard-width d-block"> Edit Game </a>
+
             <form action="/games/<%= game.id %>/?_method=DELETE" method="post" id="delete-form">
               <input type="hidden" name="_method" value="DELETE">
-              <button type="submit" class="btn btn-danger m-2"><i class= "fas fa-trash"></i>
+              <button type="submit" class="btn btn-danger my-2 standard-width d-block"><i class= "fas fa-trash"></i>
                 Delete </button>
             </form>
-            <a href="/games/edit/<%= game.id%>" class="btn btn-danger m-2"> Edit Game </a>
+
           <% } else { %>
             <form action="/users/drop_player/?_method=DELETE" method="post" id="delete-form">
               <input type="hidden" name="_method" value="DELETE">
               <input type="hidden" name="game_id" value="<%= game.id %>">
-              <button type="submit" class="btn btn-danger m-2"><i class= "fas fa-trash"></i>
+              <button type="submit" class="btn btn-danger my-2 standard-width d-block"><i class= "fas fa-trash"></i>
                 Leave Game </button>
             </form>
 
