--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -39,7 +39,7 @@
     <% if(user && game.numberOfPlayers > 0 && game.host.id != user.id) { %>
 
     <form action="/games/player/<%= game.id %>"  method="post">
-      <input type="submit" value="Join Game" class="btn btn-success float-left standard-width my-2 d-block">
+      <input type="submit" value="Join Game" class="btn btn-success  standard-width m-2 d-block">
     </form>
 
     <% } %>
@@ -52,7 +52,7 @@
    <% if(user) { %>
       <% game.players.forEach(function(player){
         if(player.playerUser.id == user.id) { %>
-          <div class="dropdown d-inline-block  float-left">
+          <div class="dropdown">
                 <%- include ../partials/host_review.ejs %>
           </div>
         <% } else { %>
@@ -67,8 +67,8 @@
 
 <% if(game.players.length > 0) { %>
  <!-- fix formating here so everything is on one line also fix width of elements and general look   -->
-    <div class="dropdown float-left">
-      <button class="btn btn-secondary dropdown-toggle standard-width my-2 d-block" type="button" id="playersDropdown" data-toggle="dropdown">
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle standard-width m-2 d-block" type="button" id="playersDropdown" data-toggle="dropdown">
         Player List
       </button>
       <div class="dropdown-menu  dropup" aria-labelledby="dropdownMenuButton">
