--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -1,5 +1,5 @@
 
-  <button class="btn btn-secondary dropdown-toggle standard-width my-2 d-block" type="button" id="hostReviewDropdown" data-toggle="dropdown">
+  <button class="btn btn-secondary dropdown-toggle standard-width m-2 d-block" type="button" id="hostReviewDropdown" data-toggle="dropdown">
     Review Host
   </button>
 
