--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -21,7 +21,7 @@
         <div class="form-group">
           <label for="hostReviewBody">Host Review: </label>
           <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."> </textarea>
-          <button class="btn btn-danger"> Submit </button>
+          <button class="btn btn-primary standard-width m-2 d-block"> Submit </button>
         </div>
       </form>
 
