update buttons for better mobile styling

--- a/views/games/find_map.ejs
+++ b/views/games/find_map.ejs
@@ -18,7 +18,12 @@
         </select>
       </div>
 
-    <button class="btn btn-primary submit standard-width my-2 d-block" type="submit" id="submit"> Search </button>
+      <div class="row">
+        <div class="col-md-12 col-lg-2">
+          <button class="btn btn-primary submit  my-2 btn-block" type="submit" id="submit"> Search </button>
+        </div>
+      </div>
+
 </form>
 
 
