--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -9,8 +9,12 @@
           <div class="card-body">
             <h5 class="card-title"> No Games Added Yet! </h5>
             <p class="card-text">Add some games to see games listed here</p>
-            <a href="games/add" class="btn btn-primary"><i class="fas fa-plus"></i>
-              Add New Game</a>
+            <div class="row">
+              <div class="col-md-12 col-lg-2">
+                <a href="games/add" class="btn btn-primary btn-block"><i class="fas fa-plus"></i>
+                Add New Game</a>
+              </div>
+            </div>
           </div>
       </div>
 
@@ -33,11 +37,18 @@
                 <p class="card-text text-muted"> Seeking <%= game.numberOfPlayers %>
                 <%= makePlural('Player', Number(game.numberOfPlayers)) %></p>
                 <% } else { %>
-                  <div class="alert alert-success"> <p class="card-text"> Game Full </p>
+                  <div class="alert alert-success">
+                    <p class="card-text"> Game Full </p>
                   </div>
                 <% } %>
-                  <a href="games/show/<%= game.id %>" class="btn btn-primary standard-width my-2 d-block"><i class="fas fa-book"></i>
-                    See Details</a>
+
+                <div class="row">
+                  <div class="col-md-12 col-lg-2">
+                    <a href="games/show/<%= game.id %>" class="btn btn-primary my-2 btn-block"><i class="fas fa-book"></i>
+                      See Details</a>
+                  </div>
+                </div>
+
               </div>
             </div>
 
