--- a/views/partials/host_review.ejs
+++ b/views/partials/host_review.ejs
@@ -1,7 +1,10 @@
-
-  <button class="btn btn-secondary dropdown-toggle standard-width m-2 d-block" type="button" id="hostReviewDropdown" data-toggle="dropdown">
+<!-- <div class="row">
+  <div class="col-md-12 col-lg-2"> -->
+    <button class="btn btn-secondary dropdown-toggle  m-2 btn-block" type="button" id="hostReviewDropdown" data-toggle="dropdown">
     Review Host
-  </button>
+    </button>
+  <!-- </div>
+</div> -->
 
   <div class="dropdown-menu">
 
@@ -11,17 +14,16 @@
           <input type="number"  class="form-control" name="hostReviewScore"  min= "1" max="5" placeholder="Rate 1 - 5">
         </div>
 
-        <div class="demo">
-          <div class="stars-outer">
-            <div class="stars-inner"></div>
-          </div>
-        </div>
-
 
         <div class="form-group">
-          <label for="hostReviewBody">Host Review: </label>
-          <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."> </textarea>
-          <button class="btn btn-primary standard-width m-2 d-block"> Submit </button>
+
+          <textarea class="form-control" name="hostReviewBody" placeholder= "Leave feedback for your game master here."></textarea>
+
+          <div class="row">
+            <div class="col-md-12 col-lg-2">
+              <button class="btn btn-primary my-2 btn-block"> Submit </button>
+            </div>
+          </div>
         </div>
       </form>
 
