--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -76,7 +76,7 @@
           <% } %>
           <div class="row">
             <div class="col-md-12 col-lg-2">
-              <a href ="/games/show/<%=upcomingGame.id%>" class="btn btn-primary btn-block"><i class="fas fa-book"></i> See Details</a>
+              <a href ="/games/show/<%=upcomingGame.id%>" class="btn btn-primary btn-block my-2"><i class="fas fa-book"></i> See Details</a>
             </div>
           </div>
 
