update size of add on small screens, fix games add

--- a/views/partials/add_form.ejs
+++ b/views/partials/add_form.ejs
@@ -55,7 +55,7 @@
     <textarea class="form-control"  name="description" placeholder="Tell us about the game..."></textarea>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block text-center">Add New Game <i class="fas fa-plus"></i> </button>
+  <button type="submit" class="btn btn-primary btn-block text-center m-2">Add New Game <i class="fas fa-plus"></i> </button>
 
 
 </form>
