clean up routes, minor view updates

--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -1,7 +1,6 @@
 <div class="row h-100 align-items-center">
-  <div class="col">
-  </div>
-  <div class="col-8 bg-light" id="add-form">
+
+  <div class="col-md-8 bg-light col-sm-12 mx-auto" id="add-form">
 
     <% if(errors.length > 0) {%>
       <% errors.forEach(function(error){ %>
@@ -15,7 +14,6 @@
 
   </div>
 
-  <div class="col">
-  </div>
+
 
 </div>
